  07 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  files/gitlab-pages-0.3.2.conf, files/gitlab-pages-0.3.2.init:
  www-servers/gitlab-pages:   Fixed buggy configuration: - Logfile was not
  accessible - Init script didn't start nor stop the daemon correctly

  07 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-pages-0.3.2.ebuild:
  www-servers/gitlab-pages:   Fixed the creation ofthe new user (syntax).

*gitlab-pages-0.3.2 (07 Mar 2017)

  07 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile-0.3.2.patch, +files/gitlab-pages-0.3.2.conf,
  +files/gitlab-pages-0.3.2.init, +gitlab-pages-0.3.2.ebuild, +metadata.xml:
  www-servers/gitlab-pages:   added first ebuild for gitlab-pages