@@ -2,6 +2,7 @@ AUX 0001-fix-Makefile-0.3.2.patch 744 SHA256 7efe9ee3cdf0e7e324155d05651f535b39f
 AUX gitlab-pages-0.3.2.conf 148 SHA256 2b1d40d38d729a4e705455a2fbe745618c573cdc7159683ebf42f3a28d41a473 SHA512 57ff7ef4f3c5f221e39f8cfd29ab58ccb126d672260ee983d6f1221bfe2cfe5553b4f0187ce384f05fc6694ad31c2f7ae02155d0c21247eccd1d7dbf1632ffba WHIRLPOOL 1cb70bb5a9e6876a58e7cf78a68e9a08a0ae947237a537f7cf93b727cdb69482114cd2c1ccd17e27b80590be11e9904bae81e06afab83066c0d10926d22dd301
 AUX gitlab-pages-0.3.2.init 698 SHA256 6751226148f5c8b53bdf3422053115ed6bb6ac3d7795b605617a7733a2b84437 SHA512 10e299febee0a66f03e8debe3f20ad635b52b5238a2ad23f585d30f14d5c0f591825bd892119f564f427e93a539184e39424c8cdc78200b2dbb5d0f588738176 WHIRLPOOL 7142b6a056a0d0a90bb18d1fdc5995c07156e05216b9e5779548427ad6f7aed4cf8eb090acfcbd0a7cc07826c0b6dfc5276ca176a80783d40405d2011a253fe0
 DIST gitlab-pages-0.3.2.tar.bz2 205531 SHA256 392b0620871ab36a362f8b8b9008c266eda465e6f32611ccbdbe640cd77ae7b5 SHA512 e452af8a9d2032ccba827a7a165abf324008c585369f74d14a47524eaaa3255a92c38f102e8cf63a86012650da6265aa1a28f0ade5131ebb1df51e6202be0edc WHIRLPOOL d47459d214d1ed9818de534885ea806f092fe2fb02b2aa08b00b95fb9c3f2693b7c9b8d3e5723be55535888e1276ba4dbc24ead2f659677a43d326dcff9f3925
+EBUILD gitlab-pages-0.3.2-r1.ebuild 1968 SHA256 947c1a842bf512d712a73c723adc9db7651041e740a575050ea636b43948d294 SHA512 c7330aaee4252d6c0bde0440d4dace061e59802459efb3da71148c100e71fe6231bb694a5aaf57e8372d5c8fca2ca84a3d359ce86dcb8c918e12fca92ca22757 WHIRLPOOL 68762bc267f336c0ac866c8e782f878d1ad5dd7066fd85bb0d5ed506b8ea9b57f28a801d6e2535869912b93fa2143f13b0155771b3ee0a31cedd3b64a01169bd
 EBUILD gitlab-pages-0.3.2.ebuild 1951 SHA256 c3617997d32d94ac44131e048a71f9e99db0243223f3158089154317cb4a3fc6 SHA512 123890a3c2c24d45be2a0e5d5042d8b3fe95fc6a7a51d447056fc08363a4414e47624b9c0744cba922f642fec3cc35952efdfc43bc4c5cbaac24deeb8554b3e1 WHIRLPOOL 7e09a647a1748c41da4120fdf8fd66bdd0a0adbc09a7462ffc7e3c9e5fdadf9036fa27c48272baef45d23977bf004df712aa3b4f11ecee113c4ffc306acbcc18
-MISC ChangeLog 715 SHA256 1cdc53deb505288e62b3b1fd7f26259ebd5462e6fdc6fc0bff46a41b91d028e7 SHA512 786edeb0f99dfe9a1e604970961ff3bc8f55ddab5621d9c9d3decc8397af5c30d207ea3f432e3b944776913b30fe25fcb986d77df58ea346fd4a86d5684e5977 WHIRLPOOL 7f9bcd41be0149d7f3858c0978dc5ca3d9dc264ec9f6d799351e8bd982e7d7e4f6a2d175d3469f2551fdcaee424a3e1e19a615b4f31b04466e2a3c25e4e3c095
+MISC ChangeLog 977 SHA256 78595c7a79bea94352d2a0682caa80db4e94a6a46da0ce9fc5f40642785046b7 SHA512 edc7b2840e3f787a5470dcf9c03789281ebecd3f82a0b90abd8902c51f93610964385687a8c7471c6806f8cbd1e25c6eb6cf5d51987ceac7172e12fbf70b092b WHIRLPOOL e2ff633b28b3439d3a136942b6548f25928ce59a1eedaf06fbce16f7dace5490ec1db61bcff301712f6ec506ebaf0020fbc7cc27ea215dbc45bb5299366f37df
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
